--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <title>Quote Generator</title>
   <link href="https://fonts.googleapis.com/css?family=IM+Fell+Great+Primer+SC|Merriweather&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=IM+Fell+Great+Primer+SC|Merriweather|Shadows+Into+Light&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body id="body">
   <h1>Simple Quote Generator</h1>
   <div id="quote-display"></div>
   <button onclick="newQuote()">New Quote</button>
+  <script src="script.js"></script>
 </body>
 </html>
